# python-project-51

./: Makefile  README.md  pyproject.toml
logic/: page_loader.py
logic/scripts/: utill.py
page_loader/: __init__.py  atrs.py  cli.py  domain.py  file.py  file_and_dir.py  html_processing.py  name_data.py  name_from_url.py  page_loader.py  relevant_url.py  soup.py  tags.py  urls.py  writing_file.py
page_loader/scripts/: util.py  utill.py
tests/: __init__.py  test_download.py  test_ex.py  test_make_name_from_url.py  test_urls.py
tests/fixtures/: initial.html  localhost-blog-about.html  ru-hexlet-io-courses.html  with_download.html
tests/fixtures/expected/: localhost-blog-about.html  localhost.py
tests/fixtures/expected/ru-hexlet-io-courses_files/: ru-hexlet-io-courses.html
tests/fixtures/ru-hexlet-io-courses_files/: ru-hexlet-io-lessons.rss
