[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["evgeny <zhek12322@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
autopep8 = "^1.7.0"

[tool.poetry.scripts]
page_loader = "logic/scripts/utill:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
