[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["evgeny <zhek12322@gmail.com>"]
packages = [
    { include = "page_loader" },
]

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.11.1"
progress = "^1.6"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
pytest = "^7.1.3"
autopep8 = "^1.7.0"
pytest-cov = "^4.0.0"
requests-mock = "^1.10.0"

[tool.poetry.scripts]
page-loader = "page_loader.scripts.utill:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
